--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Trening</title>
+	<title>Barber-Shop</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" type="image/png" href="images/favicon.ico" >
 </head>
 <body>
 	<div class="wrapper">
