set .wrap, .content, .title, .rewback1

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 			<div class="triangle-left"></div>
 			<div class="triangle-right"></div>
 		</div>
+		<div class="booking-form">
+			<div class="wrap">
+				<div class="content">
+					<div class="title"><h2>Запись на стрижку</h2></div>
+					<div class="rewback"><span>На главную</span></div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
