--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<input type="email" name="email" id="e-mail" value="Контактный e-mail" tabindex="5">
 								</div>
 								<div class="list-fields-item">
-									<textarea name="ingormation" id="add-info" cols="134" rows="15" placeholder="Доп. информация для мастера"></textarea>
+									<textarea name="ingormation" id="add-info" placeholder="Доп. информация для мастера"></textarea>
 							</div>				
 						</div>
 					
