set :focus for fields

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 					
 						<div class="fields">		
 								<div class="list-fields-item">
-									<input type="text" name='username' id="name" value="Имя" tabindex="1">
+									<input type="text" name='username' id="name" placeholder="Имя" tabindex="1">
 								</div>
 								<div class="list-fields-item">
-									<input type="text" name='firstname' id="family" value="Фамилия" tabindex="2">
+									<input type="text" name='firstname' id="family" placeholder="Фамилия" tabindex="2">
 								</div>
 								<div class="list-fields-item">
-									<input type="text" name='secondname' id="secondname" value="Отчество" tabindex="3">
+									<input type="text" name='secondname' id="secondname" placeholder="Отчество" tabindex="3">
 								</div>
 								<div class="list-fields-item">
-									<input type="tel" name="tel" id="phonenumber" value="Контактный телефон" tabindex="4">
+									<input type="tel" name="tel" id="phonenumber" placeholder="Контактный телефон" tabindex="4">
 								</div>
 								<div class="list-fields-item">
-									<input type="email" name="email" id="e-mail" value="Контактный e-mail" tabindex="5">
+									<input type="email" name="email" id="e-mail" placeholder="Контактный e-mail" tabindex="5">
 								</div>
 								<div class="list-fields-item">
 									<textarea name="ingormation" id="add-info" placeholder="Доп. информация для мастера" tabindex="6"></textarea>
