--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Barber-Shop</title>
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" type="image/png" href="images/favicon.ico" >
 </head>
@@ -20,7 +21,7 @@
 								<li class="nav-item"><a href="#" class="nav-link">Наши работы</a></li>
 								<li class="nav-item"><a href="#" class="nav-link">Записаться</a></li>
 								<li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
-								<li class="nav-item"><a href="#" class="nav-link">HTML Academy</a></li>
+								<li class="nav-item"><a href="https://htmlacademy.ru" class="nav-link" target="_blank">HTML Academy</a></li>
 							</ul>
 						</nav>
 						<!-- ./ynavigation -->
@@ -31,7 +32,7 @@
 		</header>
 
 			<div class="logo">
-				<img src="images/logotype-desktop.svg" alt="">
+				<img src="images/logotype-desktop.svg" alt="logo=img">
 			</div>
 
 			<div class="container-triangle">
