--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 						</nav>
 						<!-- ./ynavigation -->
 					</div>
-					<div class="column-2"><a href="#"><img src="images/login.png" alt="login"><span>ВХОД</span></a></div>
+					<div class="column-2">
+						<a href="#" class="nav-link">
+							<img src="images/login.png" alt="login">
+							<span>ВХОД</span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</header>
