--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Weather Frecast</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/weather-icons.css">
