--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -49,7 +49,8 @@
 				<img src="images/logotype-desktop.svg" alt="logo-img">
 			</div>
 			<div class="block-content">
-				<div class="left-element">
+				<div class="el-triangle"></div>
+				<div class="left-element-top">
 					<p class="l-elt">Стрижка у нас это выгодно!</p>
 				</div>
 				<div class="center-element">
@@ -63,7 +64,7 @@
 			</div>
 			<div class="block2-content">
 				<div class="left-element">
-					<span class="l-elt">Мужская стрижка требует точного подхода. Обратимся к статистике</span>
+					<span class="l-elt">Мужская стрижка требует точного подхода. Обратимся к статистике:</span>
 				</div>
 				<div class="center-element">
 					<p class="c-elt">90&nbsp;000&nbsp;</p>
