--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -80,20 +80,20 @@
 						<ul class="list-col">
 							<li class="list-col-item colum-2">
 								<img src="images/advantage-1-illustration.png" alt="">
-								<h2>БЫСТРО</h2>
-								<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки
+								<h2 class="col-head">БЫСТРО</h2>
+								<p class="col-tex">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки
 								</p>
 							</li>
 							<li class="list-col-item colum-2">
 								<img src="images/advantage-2-illustration.png" alt="">
-								<h2>КРУТО</h2>
-								<p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино.Во всяком случае внешне.
+								<h2 class="col-head">КРУТО</h2>
+								<p class="col-tex">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.
 								</p>
 							</li>
 							<li class="list-col-item colum-2">
 								<img src="images/advantage-3-illustration.png" alt="">
-								<h2>ДОРОГО</h2>
-								<p>
+								<h2 class="col-head">ДОРОГО</h2>
+								<p class="col-tex">
 									Наши мастера — профессионалы своего делаи не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?
 								</p>
 							</li>
