change properties list-stat

--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -52,25 +52,42 @@
 				<div class="col-wrap clearfix">
 					<div class="colum-2">
 						<ul class="stat-list">
-							<li class="stat-item"><p>Стрижка у нас это выгодно!</p></li>
+							<li class="stat-item">
+								<p>
+									Стрижка у нас это выгодно!
+								</p>
+							</li>
+							<li class="stat-item">
+								<p>
+									Мужская стрижка требует точного подхода. Обратимся к статистике:
+								</p>
+							</li>
 						</ul>
 					</div>
 					<div class="colum-4 colum-4--stat-col">
 						<ul class="stat-list">
 							<li class="stat-item" style="background-color: #404040;">
-								<span class="stat-count">1 500 <small>*</small></span>
-								<p class="stat-count-desk">рублей вложений</p>
+								<p class="stat-count">
+									1 500 <small><sup>*</sup></small>
+								</p>
+								<p class="stat-count-desk">
+									рублей вложений
+								</p>
 							</li>
 							<li class="stat-item" style="background-color: #4e4e4e;">
-								<span class="stat-count">7 200</span>
-								<p class="stat-count-desk">секунд времени мастера</p>
+								<p class="stat-count">
+									7 200
+								</p>
+								<p class="stat-count-desk">
+									секунд времени мастера
+								</p>
 							</li>
 							<li class="stat-item" style="background-color: #353535;">
-								<span class="stat-count">90 000</span>
+								<p class="stat-count">90 000</p>
 								<p class="stat-count-desk">постриженных волос</p>
 							</li>
 							<li class="stat-item" style="background-color: #404040;">
-								<span class="stat-count">500&nbsp; 000&nbsp;<small>*</small></span>
+								<p class="stat-count">500&nbsp; 000&nbsp;<small><sup>*</sup></small></p>
 								<p class="stat-count-desk">лайков и комплиментов</p>
 							</li>
 						</ul>
