--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -94,7 +94,7 @@
 						</ul>
 					</div>					
 				</div>
-				<div class="three-col">
+				<div class="three-col clearfix">
 						<ul class="list-col">
 							<li class="list-col-item colum-2">
 								<img src="images/advantage-1-illustration.png" alt="">
@@ -117,6 +117,12 @@
 							</li>
 						</ul>
 					</div>
+			</div>
+			<div class="triangle">
+				<div class="inset-container">
+					<div class="left-triangle"></div>
+					<div class="right-triangle"></div>
+				</div>
 			</div>
 		</div>
 	</div>
