--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -119,7 +119,7 @@
 					</div>
 			</div>
 			<div class="triangle">
-				<div class="inset-container">
+				<div class="inset-contai">
 					<div class="left-triangle"></div>
 					<div class="right-triangle"></div>
 				</div>
