--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -125,6 +125,16 @@
 				</div>
 			</div>
 		</div>
+		<div class="news-content">
+			<div class="head-wrap">
+				<div class="head-content">
+					<div class="left-content-head">
+						<p class="head-header">Новости и акции</p>
+					</div>
+					<div class="right-button-cont"></div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
