--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -131,7 +131,7 @@
 					<div class="left-content-head">
 						<p class="head-header">Новости и акции</p>
 					</div>
-					<div class="right-button-cont"></div>
+					<div class="right-button-cont">p</div>
 				</div>
 			</div>
 		</div>
