dobavil fishku sleva

--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -51,6 +51,7 @@
 			<div class="statistic">
 				<div class="col-wrap clearfix">
 					<div class="colum-2">
+						<div class="trngl-lft"></div>
 						<ul class="stat-list">
 							<li class="stat-item">
 								<p>
