add news section

--- a/barber-shop/index.html
+++ b/barber-shop/index.html
@@ -132,7 +132,11 @@
 					<div class="left-content-head">
 						<p class="head-header">Новости и акции</p>
 					</div>
-					<div class="right-button-cont">p</div>
+					<div class="right-button-cont">
+						<p class="butt">
+							<a href="#" class="but-link">ПОКАЗАТЬ ВСЕ</a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
