--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<div class="container">
 			<div class="header">
-				<h1>CSS Wather Forecast&nbsp;<i class="wi wi-sunrise"></i></h1>
+				<h1>CSS&nbsp;Wather Forecast&nbsp;<i class="wi wi-sunrise"></i></h1>
 			</div>
 			<div class="content">
 				<div class="lisbon">
