--- a/DZ/forms/index.html
+++ b/DZ/forms/index.html
@@ -55,11 +55,19 @@
 			</div>
 			<div class="input-wrap-fields">
 				<div class="container">
-					<div class="title"><p>СВЯЖИТЕСЬ С НАМИ</p></div>
+					<div class="title"><p class="text-title">СВЯЖИТЕСЬ С НАМИ</p></div>
 					<div class="inpt-flds">
 						<ul class="list-flds">
 							<li class="flds-item"><input type="text" placeholder="Ваше имя"></li>
-							<li class="flds-item"><input type="text" placeholder=""></li>
+							<li class="flds-item">
+								<form action="" method="post">
+									<select>
+										<option value="">Общепромышленные объекты
+										</option>
+										<option value="">Судостроение</option>
+									</select>
+								</form>
+							</li>
 							<li class="flds-item"><input type="text" placeholder="Номер телефона"></li>
 							<li class="flds-item"><input type="text" placeholder="E-mail"></li>
 							<li class="flds-item"><textarea type="text" placeholder="Сообщение"></textarea></li>
