--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -39,8 +39,9 @@
 				</div>
 			</div>
 		</section>
-		<footer>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptatibus quo aut ad, voluptatem quas libero, incidunt ipsam, tempora illum a mollitia minus, sit doloribus architecto quos velit reiciendis nisi.
+		<footer class="foot__page">
+			<div class="foot__page-left"></div>
+			<div class="foot__page-right"></div>
 		</footer>
 	</div>
 </body>
