--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -40,7 +40,22 @@
 			</div>
 		</section>
 		<footer class="foot__page">
-			<div class="foot__page-left"></div>
+			<div class="foot__page-left">
+				<ul class="foot__list">
+					<li class="foot__item">
+						<a href="#" class="foot__logo">Bikees.</a>
+					</li>
+					<li class="foot__item">
+						<a href="#" class="foot__sec">PAIEMENT 100% SECURISÉ - DONNÉES CRIPTÉES ET CHIFRÉES.</a>
+					</li>
+					<li class="foot__item">
+						<a class="foot_bonus" href='#'>Livraison gratuite a partir de 50<i class="fa fa-eur" aria-hidden="true"></i> d`achat</a>
+					</li>
+					<li class="foot__item">
+						<p class='foot__copyr'>&copy;BIKEES.2015</p>
+					</li>
+				</ul>
+			</div>
 			<div class="foot__page-right"></div>
 		</footer>
 	</div>
