--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -15,8 +15,8 @@
 				<a href="#" class="head__logo">Bikees.</a>
 			</div>
 			<div class="head__wrap">
-				<form action="">
-					<input type="text">
+				<form action="" class="head__form">
+					<input type="text" class="search">
 					<button type="submit"></button>
 				</form>
 			</div>
@@ -43,20 +43,48 @@
 			<div class="foot__page-left">
 				<ul class="foot__list">
 					<li class="foot__item">
-						<a href="#" class="foot__logo">Bikees.</a>
+						<a href="#" class="foot__logo">
+							Bikees.
+						</a>
 					</li>
 					<li class="foot__item">
-						<a href="#" class="foot__sec">PAIEMENT 100% SECURISÉ - DONNÉES CRIPTÉES ET CHIFRÉES.</a>
+						<a href="#" class="foot__sec">
+							PAIEMENT 100% SECURISÉ - DONNÉES CRIPTÉES ET CHIFRÉES.
+						</a>
 					</li>
 					<li class="foot__item">
-						<a class="foot_bonus" href='#'>Livraison gratuite a partir de 50<i class="fa fa-eur" aria-hidden="true"></i> d`achat</a>
+						<a class="foot_bonus" href='#'>
+							Livraison gratuite a partir de 50<i class="fa fa-eur" aria-hidden="true"></i> d`achat
+						</a>
 					</li>
 					<li class="foot__item">
-						<p class='foot__copyr'>&copy;BIKEES.2015</p>
+						<p class='foot__copyr'>
+							&copy;BIKEES.2015
+						</p>
 					</li>
 				</ul>
 			</div>
-			<div class="foot__page-right"></div>
+			<div class="foot__page-center">
+				<ul class="foot__center-list">
+					<li class="list__item"><a class="list__item-link" href="#">fixies</a></li>
+					<li class="list__item"><a class="list__item-link" href="#">mentios</a></li>
+					<li class="list__item"><a class="list__item-link" href="#">cruisers</a></li>
+					<li class="list__item"><a class="list__item-link" href="#">c.g.u</a></li>
+					<li class="list__item"><a class="list__item-link" href="#">accessoires</a></li>
+					<li class="list__item"><a class="list__item-link" href="#">contact</a></li>
+				</ul>
+			</div>
+			<div class="foot__page-right">
+				<ul class="list__right">
+					<li class="right__item">
+						<form action="" method="post" class="foot__form">
+							<label for=".subscribe">inscription newsletter</label>
+							<input type="email" class="subscribe" placeholder="  Saisissez votre adresse mail">
+						</form>
+					</li>
+					<li class="right__item"></li>
+				</ul>
+			</div>
 		</footer>
 	</div>
 </body>
