--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -82,7 +82,17 @@
 							<input type="email" class="subscribe" placeholder="  Saisissez votre adresse mail">
 						</form>
 					</li>
-					<li class="right__item"></li>
+					<li class="right__item">
+						<a href="https://twitter.com" class="soc__link" target="_blank">
+							<span class="right__item-tw social"></span>
+						</a>
+						<a href="https://plus.google.com" class="soc__link" target="_blank">
+							<span class="right__item-gplus social"></span>
+						</a>
+						<a href="https://facebook.com" class="soc__link" target="_blank">
+							<span class="right__item-fb social"></span>
+						</a>
+					</li>
 				</ul>
 			</div>
 		</footer>
