add main section

--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -24,6 +24,7 @@
 				</form>
 			</div>
 		</header>
+		<main>
 		<section class="content">
 			<div class="content__left">
 				<div class="content__layer content__layer--left">
@@ -33,6 +34,8 @@
 					</div>
 				</div>
 			</div>
+		</section>
+		<section class="content">
 			<div class="content__right">
 				<div class="content__layer content__layer--right">
 					<div class="content__main content__main--right">
@@ -42,6 +45,7 @@
 				</div>
 			</div>
 		</section>
+	</main>
 		<footer class="foot__page">
 			<div class="foot__page-wrap">
 				<div class="foot__page-left">
@@ -89,7 +93,7 @@
 					<ul class="list__right">
 						<li class="right__item">
 							<form action="#" method="post" class="foot__form">
-								<label for=".subscribe">inscription newsletter</label>
+								<label for="subscribe">inscription newsletter</label>
 								<input type="email" class="subscribe" placeholder="  Saisissez votre adresse mail">
 							</form>
 						</li>
