--- a/DZ/bicycle/index.html
+++ b/DZ/bicycle/index.html
@@ -93,7 +93,7 @@
 					<ul class="list__right">
 						<li class="right__item">
 							<form action="#" method="post" class="foot__form">
-								<label for="subscribe">inscription newsletter</label>
+								<label for="subscribe" class="subsc-label">inscription newsletter</label>
 								<input type="email" class="subscribe" placeholder="  Saisissez votre adresse mail">
 							</form>
 						</li>
