--- a/scroll_paralx/index.html
+++ b/scroll_paralx/index.html
@@ -29,6 +29,6 @@
 		</div>
 	</main>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.js?v=1"></script>
 </body>
 </html>
