--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -244,11 +244,13 @@
 	<div class="download">
 		<div class="download_wrap wrapper">
 			<div class="left">
-					<h2>How Download the app?</h2>
-					<span class="descr">Just download the app from the store. Simple, nice and user-friendly application of the weather. Only relevant and usefull information.</span>
-					<div class="btn-wrap">
-						<button class="btn_dwld btn-appStore"><a href="https://www.apple.com/ios/app-store/"></a></button>
-						<button class="btn_dwld btn-googlPlay"><a href="https://play.google.com/"></a></button>
+					<div class="wrap">
+						<h2>How Download the app?</h2>
+						<span class="descr">Just download the app from the store. Simple, nice and user-friendly application of the weather. Only relevant and usefull information.</span>
+						<div class="btn_wrap">
+							<button class="btn_dwld btn-appStore"><a href="https://www.apple.com/ios/app-store/"></a></button>
+							<button class="btn_dwld btn-googlPlay"><a href="https://play.google.com/"></a></button>
+						</div>
 					</div>
 				
 			</div>
@@ -266,19 +268,19 @@
 		</div>
 	</div>
 	<footer class="main_footer">
-		<nav class="main-header-nav wrapper offset_footer">
-			<span class="logo-title"><span class="red">Fun</span><span class="blue"> Weather.</span></span>
-			<ul class="footer_nav">
-				<li class="footer_nav__item">
+		<nav class="main_header__nav wrapper offset_footer">
+			<span class="logo_title"><span class="red">Fun</span><span class="blue"> Weather.</span></span>
+			<ul class="header_nav" id ='show-footer'>
+				<li class="header_nav__item">
 					<a class="footer_nav__link active--link" href="#">Home</a></li>
-				<li class="footer_nav__item">
+				<li class="header_nav__item">
 					<a class="footer_nav__link" href="">Features</a></li>
-				<li class="footer_nav__item">
+				<li class="header_nav__item">
 					<a class="footer_nav__link" href="">Reviews</a></li>
-				<li class="footer_nav__item">
+				<li class="header_nav__item">
 					<a class="footer_nav__link" href="">download</a></li>
 			</ul>
-			<ul class="footer_social__list">
+			<ul class="header_social__list">
 				<li class="footer_social__item">
 					<a href="https://www.facebook.com" class="footer_social__link header_social__link">
 						<i class="fab fa-facebook-f"></i>
