--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -20,10 +20,10 @@
 		<nav class="nav_header wrapper">
 			<span class="logo">Fun Weather.</span>
 			<ul class="nav_list">
-				<li class="nav_item"><a href="#">Home</a></li>
-				<li class="nav_item"><a href="#">Features</a></li>
-				<li class="nav_item"><a href="#">Reviews</a></li>
-				<li class="nav_item"><a href="#">download</a></li>
+				<li class="nav_item"><a href="#" data-name='home'>Home</a></li>
+				<li class="nav_item"><a href="#" data-name='features'>Features</a></li>
+				<li class="nav_item"><a href="#" data-name='reviews'>Reviews</a></li>
+				<li class="nav_item"><a href="#" data-name='download'>download</a></li>
 			</ul>
 			<ul class="social_list">
 				<li class="social_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -34,7 +34,7 @@
 		</nav>
 	</header>
 	<main>
-		<section class="bg_section wrapper">
+		<section class="bg_section wrapper" data-name='home'>
 			<ul class="section__list">
 				<li class="section__item">
 					<h2>Get the most fun  weather app</h2>
@@ -54,7 +54,7 @@
 			</ul>
 			<div class="btn_to_dwn"><span class="btn_dwn"><i class="fas fa-angle-down"></i></span></div>
 		</section>
-		<section class="features wrapper">
+		<section class="features wrapper" data-name='features'>
 			<div class="title-section">
 				<h2 class="title">Perfect Features</h2>
 				<span class="title-sbscr">Only necessary</span>
@@ -83,7 +83,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="widjet wrapper">
+		<section class="widjet wrapper" data-name='widjet'>
 			<div class="title-section">
 				<h2 class="title">Simple widgets</h2>
 				<span class="title-sbscr">Drag and Drop</span>
@@ -102,7 +102,7 @@
 		     <span class="btn_rght"><i class="fas fa-angle-right"></i></span>
 		   		</div>
 		</section>
-		<section class="screenshoot wrapper">
+		<section class="screenshoot wrapper" data-name='screenshoot'>
 			<div class="title-section">
 				<h2 class="title">screenshoots</h2>
 				<span class="title-sbscr">The brightest images</span>
@@ -161,7 +161,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="reviews wrapper">
+		<section class="reviews wrapper" data-name='reviews'>
 			<div class="title-section">
 				<h2 class="title">What people are saying</h2>
 				<span class="title-sbscr">Reviews</span>
@@ -220,7 +220,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="download wrapper">
+		<section class="download wrapper" data-name='download'>
 			<ul class="section__list">
 				<li class="section__item">
 					<h2>How Download the app?</h2>
@@ -251,13 +251,13 @@
 			<span class="logo_title"><span class="red">Fun</span><span class="blue"> Weather.</span></span>
 			<ul class="nav_list" id ='show-footer'>
 				<li class="nav_item">
-					<a ctive--link" href="#">Home</a></li>
+					<a href="#" data-name='home'>Home</a></li>
 				<li class="nav_item">
-					<a href="">Features</a></li>
+					<a href="" data-name='features'>Features</a></li>
 				<li class="nav_item">
-					<a href="">Reviews</a></li>
+					<a href="" data-name='reviews'>Reviews</a></li>
 				<li class="nav_item">
-					<a href="">download</a></li>
+					<a href="" data-name='download'>download</a></li>
 			</ul>
 			<ul class="social_list">
 				<li class="social_item">
