--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -52,7 +52,7 @@
 					</div>
 				</li>
 			</ul>
-			<div class="btn_to_dwn"><span class="btn_dwn"><i class="fas fa-angle-down"></i></span></div>
+			<div class="btn_to_dwn"><button class="btn_dwn"><i class="fas fa-angle-down"></i></button></div>
 		</section>
 		<section class="features wrapper" data-name='features'>
 			<div class="title-section">
