modifed html & js

--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -20,10 +20,10 @@
 		<nav class="nav_header wrapper">
 			<span class="logo">Fun Weather.</span>
 			<ul class="nav_list">
-				<li class="nav_item"><a href="#" data-name='home'>Home</a></li>
-				<li class="nav_item"><a href="#" data-name='features'>Features</a></li>
-				<li class="nav_item"><a href="#" data-name='reviews'>Reviews</a></li>
-				<li class="nav_item"><a href="#" data-name='download'>download</a></li>
+				<li class="nav_item" data-name='home'><a class="active--item" href="#">Home</a></li>
+				<li class="nav_item" data-name='features'><a href="#">Features</a></li>
+				<li class="nav_item" data-name='reviews'><a href="#">Reviews</a></li>
+				<li class="nav_item" data-name='download'><a href="#">download</a></li>
 			</ul>
 			<ul class="social_list">
 				<li class="social_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -42,8 +42,8 @@
 						Simple, nice and user-friendly application of the weather. Only useful information.
 					</span>
 					<div class="btn_wrap">
-						<button class="btn bnt_dwnld">dowload</button>
-						<button class="btn bnt_features">features</button>
+						<button class="btn bnt_dwnld" data-name='download'>dowload</button>
+						<button class="btn bnt_features" data-name='features'>features</button>
 					</div>
 				</li>
 				<li class="section__item">
@@ -52,7 +52,7 @@
 					</div>
 				</li>
 			</ul>
-			<div class="btn_to_dwn"><button class="btn_dwn"><i class="fas fa-angle-down"></i></button></div>
+			<div class="btn_to_dwn"><button class="btn_dwn" data-name='widjet'><i class="fas fa-angle-down"></i></button></div>
 		</section>
 		<section class="features wrapper" data-name='features'>
 			<div class="title-section">
@@ -250,14 +250,14 @@
 		<nav class="nav_header wrapper offset_footer">
 			<span class="logo_title"><span class="red">Fun</span><span class="blue"> Weather.</span></span>
 			<ul class="nav_list" id ='show-footer'>
-				<li class="nav_item">
-					<a href="#" data-name='home'>Home</a></li>
-				<li class="nav_item">
-					<a href="" data-name='features'>Features</a></li>
-				<li class="nav_item">
-					<a href="" data-name='reviews'>Reviews</a></li>
-				<li class="nav_item">
-					<a href="" data-name='download'>download</a></li>
+				<li class="nav_item" data-name='home'>
+					<a class="active--item" href="#">Home</a></li>
+				<li class="nav_item" data-name='features'>
+					<a href="">Features</a></li>
+				<li class="nav_item" data-name='reviews'>
+					<a href="">Reviews</a></li>
+				<li class="nav_item" data-name='download'>
+					<a href="">download</a></li>
 			</ul>
 			<ul class="social_list">
 				<li class="social_item">
