modifed html & js & css change button on anchor

--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -235,12 +235,11 @@
 						Just download the app from the store. Simple, nice and user-friendly application of the weather. Only relevant and usefull information.
 					</span>
 					<div class="btn_wrap">
-						<button class="btn btn_appl">
-							<a href="https://www.apple.com/ios/app-store/" class="store_link" target="_blank"></a>
-						</button>
-						<button class="btn btn_ggl">
-							<a href="https://play.google.com/" class="store_link" target="_blank"></a>
-						</button>
+						<a class="btn btn_appl store_link" href="https://www.apple.com/ios/app-store/" target="_blank"></a>
+					
+						<a class="btn btn_ggl store_link"
+							 href="https://play.google.com/" target="_blank"></a>
+						
 					</div>
 				</li>
 				<li class="section__item item_download">
